[package]
authors = [
    "Jorge Aparicio <jorge@japaric.io>",
    "Ethan Frey <ethanfrey@noreply.github.com>",
    "Simon Warta <webmaster128@noreply.github.com>",
]
categories = ["wasm"]
description = "serde-json for wasm programs"
documentation = "https://docs.rs/serde-json-wasm"
edition = "2018"
keywords = ["serde", "json", "wasm"]
license = "MIT OR Apache-2.0"
name = "serde-json-wasm"
readme = "README.md"
repository = "https://github.com/CosmWasm/serde-json-wasm"
version = "0.2.0"
exclude = ["ci/*", ".gitignore", ".cargo", ".travis.yml"]

[dependencies]
serde = { version = "^1.0.80", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde_derive = "^1.0.80"
